# graph-wiring-epiplexity

./: .gitignore  ArrowSpaceEpiplexity.wl  Epiplexity_A_measure_on_Graph_Wiring.aux  Epiplexity_A_measure_on_Graph_Wiring.out  Epiplexity_A_measure_on_Graph_Wiring.tex  README.md  arrowspace_epiplexity_structural_information.ipynb  notebook_intro.md  pyproject.toml  report.md
notebooks/: 00_arrowspace_epiplexity_structural_information.ipynb  01_arrowspace_cve1999_2025_epiplexity_check_v3.ipynb
notebooks/legacy/: 01_arrowspace_cve1999_2025_epiplexity_check_v1.ipynb
output/: chart2_rayleigh_distributions.png.meta.json  chart3_observer_dependence.png.meta.json  chart5_eigenmaps.png.meta.json
output/legacy/v1/: chart1_mdl_decomposition.png.meta.json  chart4_data_selection.png.meta.json
paper/: Epiplexity_A_measure_on_Graph_Wiring.aux  Epiplexity_A_measure_on_Graph_Wiring.tex
samples/: .gitkeep
src/: arrowspace_cve1999_2025_epiplexity_check.ipynb  arrowspace_epiplexity_structural_information.ipynb  script_nb.py
src/legacy/: 01_arrowspace_cve1999_2025_epiplexity_check_v2.ipynb
